# pyimgrec

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README.md  README.preview.html  aclocal.m4  bdate.py  config.h  config.status  configure  configure.ac  configure.ac~  configure~  garbage.py  img_main.py  norm_outline.py  pyimgrec.py  pyimgutils.py  shapes.txt  stack.py  treehand.py
algorithm/: flood.py  norm_outline.py  outline.py  rectflood.py
autom4te.cache/: output.0  output.1  output.10  output.11  output.12  output.13  output.2  output.3  output.4  output.5  output.6  output.7  output.8  output.9  requests  traces.0  traces.1  traces.10  traces.11  traces.12  traces.13  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
docs/: flood.html  norm_outline.html  pyimgrec.html  pyimgutils.html
images/: Untitled.xcf  enrolled.pgm  finger.pgm  line.xcf  shapes.txt  shapex.xcf  verify.pgm
imgrec/: Makefile  Makefile.in  bdate.h  bdate.py  color.c  flood.c  hello.c  imgrec.c  imgrec.h  line.c  norm.c  square.c  test1.c  utils.c  utils.h  walk.c
m4/: pygobj-2.m4  pygobj-3.m4
pyimgrec/: Makefile  Makefile.in  Makefile.old  bdate.h  bdate.py  color.c  compilers.sh  env.txt  imgrec.c  imgrec.h  line.c  norm.c  setup.py  square.c  test.py  utils.c  utils.h  walk.c
study/: memview.py
